# urirun-connector-fs

./: README.md  local.dev.txt  pyproject.toml  uri-cp
.github/workflows/: ci.yml  integration-urirun-llm.yml
examples/: deploy-fs-transfer.sh  fs-transfer-bindings.json  fs_transfer.py
scripts/: ci_urirun_llm_smoke.py
tests/: test_contract_conformance.py  test_fs_core.py
urirun_connector_fs/: __init__.py  connector.manifest.json  contracts.py  core.py
