[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-fs"
version = "0.1.0"
description = "Filesystem duplicate-detection connector for ifuri and urirun (fs://)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
perceptual = ["imagehash>=4.3", "pillow>=10"]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/fs"
Repository = "https://github.com/if-uri/urirun-connector-fs"

[project.scripts]
urirun-fs = "urirun_connector_fs.core:main"

[project.entry-points."urirun.bindings"]
fs = "urirun_connector_fs.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_fs*"]

[tool.setuptools.package-data]
urirun_connector_fs = ["connector.manifest.json"]
